fix context field layout issue

--- a/resources/Sherlock.css
+++ b/resources/Sherlock.css
@@ -20,15 +20,6 @@
 .sherlock span.glyphicon-search {
   top: 0;
 }
-.sherlock li.dropdown-header {
-  display: none;
-}
-.sherlock .first-cell {
-  float: left;
-}
-.sherlock .cnty-cell {
-  float: right;
-}
 .sherlock [data-dojo-attach-point='spinnerDiv'] {
   padding-left: 7px;
 }
@@ -39,6 +30,12 @@
   font-size: 12px;
   position: absolute;
   z-index: 9999;
+}
+.matches-table .first-cell {
+  float: left;
+}
+.matches-table .cnty-cell {
+  float: right;
 }
 .matches-table [data-dojo-attach-point='matchesList'] {
   display: block;
@@ -52,4 +49,7 @@
 }
 .matches-table li {
   padding: 2px 12px;
+}
+.matches-table li.dropdown-header {
+  display: none;
 }
